fix header on mobile

--- a/backend/src/http/public/static/css/front/header.css
+++ b/backend/src/http/public/static/css/front/header.css
@@ -1,7 +1,7 @@
 .header {
     box-shadow: 0 2px 15px 0 rgba(0,0,0,0.1);
     height: 107px;
-    width: 100%;
+    width: 100vw;
     position: fixed;
     z-index: 1000;
     background: white;
